--- a/resources/sass/_bootstrap-variables.scss
+++ b/resources/sass/_bootstrap-variables.scss
@@ -191,7 +191,7 @@ $inverse-color: $gray-lighter !default;
 //
 // Style anchor elements.
 
-$link-color:            $brand-info !default;
+$link-color:            $brand-warning !default;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
