--- a/resources/sass/admin/products/show.scss
+++ b/resources/sass/admin/products/show.scss
@@ -46,27 +46,37 @@
 @import "./resources/sass/common/upload-products-modal";
 @import "./resources/sass/common/products-list";
 
-$products-filter-width: 280px;
-
-.site-content {
-  padding: 0;
-}
-
-.products-wrapper {
-  position: relative;
-  min-height: 100vh;
-  .products-filters {
-    @include position(absolute, 0 null 0 0);
-    padding: get-spacer(3, x);
-    background-color: white;
-    width: $products-filter-width;
-  }
-  .products-list-wrapper {
-    margin-left: $products-filter-width;
-    padding: $container-fluid;
+#admin-products-show {
+  .products-list {
+    .img-wrapper {
+      height: 195px;
+      width: 100%;
+      margin: 0;
+    }
   }
 }
 
-#product-upload {
-  margin-bottom: get-spacer(3, y);
+.product-details-list {
+  @include list-unstyled;
+  li {
+    @include flex-row;
+    margin-bottom: get-spacer(2, y);
+    span {
+      width: 30%;
+    }
+    input {
+      width: 70%;
+    }
+  }
+}
+
+.categories-nav {
+  a, span {
+    font-size: $font-size-sm;
+    &:not(:last-child) {
+      &:after {
+        content: ' · ';
+      }
+    }
+  }
 }
